<resources>

    <string-array name="seting_list">
        <item>Account Information</item>
        <item>Address Book</item>
        <item>General</item>
        <item>Policies</item>
        <item>Help</item>

    </string-array>


    <string name="app_name">eMall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eMall</string>
    <string name="nav_header_subtitle">Electronic shopping mall</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notification">Notification</string>
    <string name="menu_order">Order</string>
    <string name="menu_help">Help and Support </string>
    <string name="menu_setting">Settings</string>
    <string name="menu_dark_mode">Dark Mode</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>


    <string name="nav_account">Account</string>
    <string name="nav_category">Categories</string>
    <string name="nav_home">Home</string>
    <string name="nav_fav">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is home fragment</string>



    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod.
    </string>

</resources>